--- a/work.html
+++ b/work.html
@@ -75,9 +75,8 @@
 <h5>Community Activities</h5><hr>
 <p>SIGCSE '21<br>Program Committee Member (Panels)
 <p>SIGCSE '20<br>Program Committee Member (Experience Reports and Tools)
-
-<p>Journals: (Springer) Social Network Analysis and Mining (SNAM), (IEEE) Transactions on Smart Grid
-<br>Conferences: SIGCSE '19<br>Reviewer
+<p>ITiCSE '21, SIGCSE '21, SIGCSE '20, SIGCSE '19<br>Reviewer
+<p>(Springer) Social Network Analysis and Mining (SNAM), (IEEE) Transactions on Smart Grid<br>Reviewer
 </p>
 
 </div>
