--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@ I'm a PhD student with the <a href="http://cs.vt.edu" target = "_blank">Departme
 
 <tr aligh="LEFT">
 <td valign="TOP" width="180px" align="left">
+01.2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</td>
+<td valign="TOP" align="LEFT">
+Invited to serve on the PC of <a href="https://iticse.acm.org/" target = "_blank">ITiCSE 2021</a>.
+</td>
+</tr>
+
+<tr aligh="LEFT">
+<td valign="TOP" width="180px" align="left">
 08.2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td>
 <td valign="TOP" align="LEFT">
