--- a/work.html
+++ b/work.html
@@ -73,9 +73,8 @@
 </p><br>
 
 <h5>Community Activities</h5><hr>
-<p>SIGCSE '21<br>Program Committee Member (Panels)
-<p>SIGCSE '20<br>Program Committee Member (Experience Reports and Tools)
-<p>ITiCSE '21, SIGCSE '21, SIGCSE '20, SIGCSE '19<br>Reviewer
+<p>ITiCSE '21<br>Program Committee Member
+<p>SIGCSE '21, SIGCSE '20, SIGCSE '19<br>Program Committee Member
 <p>(Springer) Social Network Analysis and Mining (SNAM), (IEEE) Transactions on Smart Grid<br>Reviewer
 </p>
 
