--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header">
           &#9776;
         </button>
-        <img src="images/photo_me.jpeg" id="profile-pic">
+        <img src="images/hassan_image.jpeg" id="profile-pic">
         <a class="navbar-brand" id="navbar-titlestyle" href="#">Taha Hassan</a>
         </div>
 
@@ -52,7 +52,7 @@
 
 <div class="row">
 
-<div class="col" style="width: 22%;vertical-align:text-top;text-align:center;"><br><img class="profile-picture" src="images/taha_hassan_virginia_tech.jpeg"></div>
+<div class="col" style="width: 22%;vertical-align:text-top;text-align:center;"><br><img class="profile-picture" src="images/hassan_image.jpeg"></div>
 <div class="col" style="width: 73%;vertical-align:text-top;float: left;text-align:justify;">
 I'm a PhD student with the <a href="http://cs.vt.edu" target = "_blank">Department of Computer Science</a>, <a href="http://vt.edu" target = "_blank">Virginia Tech</a>. I'm advised by <a href="http://people.cs.vt.edu/mccricks/" target = "_blank"> Dr. Scott McCrickard.</a> I work on statistical learning for <strong>trust-aware group recommendation</strong> (deep multi-task learning, Bayesian ensemble models), and bias and <strong>trust issues in recommendation UX</strong> (power and <strong>editorial authority imbalance</strong>, fairness preservation, filter bubbles, distributive justice). My interests are motivated by real-world problems in education, sustainability and behavioral finance. <br><br>
 
@@ -77,7 +77,7 @@ I'm a PhD student with the <a href="http://cs.vt.edu" target = "_blank">Departme
           <a href="https://scholar.google.com/citations?user=5Afum4UAAAAJ&hl=en" target = "_blank">Google Scholar</a>,
           <a href="https://www.researchgate.net/profile/Taha_Hassan/" target = "_blank"> ResearchGate</a>,
           <a href="https://dl.acm.org/profile/99659369801/" target = "_blank">ACM</a>,
-          <a href="https://academic.microsoft.com/profile/hi6g2f42-9g0f-4367-8e07-3f065680jf4j/TahaHassan/" target = "_blank">Microsoft Academic</a>
+          <a href="">Microsoft Academic</a>
 
 </p>
 </div>
@@ -103,6 +103,43 @@ I'm a PhD student with the <a href="http://cs.vt.edu" target = "_blank">Departme
 
 <table class="table table-striped">
 <tbody>
+<tr align="LEFT">
+  <td valign="TOP" width="180px" align="LEFT">01.2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+  <td valign="TOP" align="LEFT">Reviewing for ACM <a href="https://iticse.acm.org/2022">ITiCSE 2022</a> and <a href="https://springer.com/journal/10639" target="_blank">Education and Information Technologies</a> (Springer).</td>
+</tr>
+  
+<tr align="LEFT">
+  <td valign="TOP" width="180px" align="LEFT">08.2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+  <td valign="TOP" align="LEFT">Reviewing for ACM <a href="https://sigcse2022.sigcse.org" target="_blank">SIGCSE 2022</a>, and SV for <a href="https://recsys.acm.org/recsys2021" target="_blank">RecSys 2021</a>.
+  </td>
+</tr>
+
+<tr align="LEFT">
+<td valign="TOP" width="180px" align="left">
+06.2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</td>
+<td valign="TOP" align="LEFT">
+At <a href="https://www.um.org/umap2021/" target = "_blank">UMAP 2021</a> this summer, I'll talk about how editorial authority is critical to trust transactions in recommender systems.&nbsp<a href="pdfs/umap_hassan2021.pdf" target = "_blank">(paper)</a>
+</td>
+</tr>
+
+<tr aligh="LEFT">
+<td valign="TOP" width="180px" align="left">
+06.2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</td>
+<td valign="TOP" align="LEFT">
+I'll teach CS1064, "Introduction to Programming using Python", this summer.
+</td>
+</tr>
+
+<tr aligh="LEFT">
+<td valign="TOP" width="180px" align="left">
+03.2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</td>
+<td valign="TOP" align="LEFT">
+Full paper accepted at the 29th ACM <a href="https://www.um.org/umap2021/" target = "_blank">UMAP 2021</a>.
+</td>
+</tr>
 
 <tr aligh="LEFT">
 <td valign="TOP" width="180px" align="left">
@@ -137,7 +174,7 @@ At <a href="https://iticse.acm.org/" target = "_blank">ITiCSE 2020</a>, I'll tal
 03.2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td>
 <td valign="TOP" align="LEFT">
-Full paper accepted at <a href="https://iticse.acm.org/" target = "_blank">ITiCSE 2020</a>.
+Full paper accepted at the 26th ACM <a href="https://iticse.acm.org/" target = "_blank">ITiCSE 2020</a>.
 </td>            
 </tr>
 
@@ -170,7 +207,7 @@ At <a href="http://websci19.webscience.org/" target = "_blank">Web Science 2019<
 06.2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td>
 <td valign="TOP" align="LEFT">
-Poster paper accepted at <a href="http://asonam.cpsc.ucalgary.ca/2019/" target = "_blank">ASONAM 2019</a>.
+Poster paper accepted at the 11th IEEE/ACM <a href="http://asonam.cpsc.ucalgary.ca/2019/" target = "_blank">ASONAM 2019</a>.
 </td>
 </tr>
 <tr aligh="LEFT">
